Stop scrollbars showing up with overflow: hidden

--- a/static_files/css/flowbetween.css
+++ b/static_files/css/flowbetween.css
@@ -4,12 +4,13 @@ html, body {
     background: #555555;
     width:      100%;
     height:     100%;
+    overflow:   hidden;
 }
 
 #root {
     width:      100%;
     height:     100%;
-    overflow:   none;
+    overflow:   hidden;
 }
 
 #root * {
